# screen-tracker

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  compare.cpp  compare.hpp  database.cpp  database.hpp  main.cpp  screen.cpp  screen.hpp  tracker.cpp  tracker.hpp  window.cpp  window.hpp  window.qml
src/gui/: flowlayout.cpp  flowlayout.h  imageview.cpp  imageview.hpp  window.cpp  window.hpp
src/qt/: database_qt.cpp  database_qt.hpp  screen_qt.cpp  screen_qt.hpp
tests/: CMakeLists.txt  compare.cpp  database_qt.cpp
